--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "express",
+  "name": "scrumblr",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.17.1",
     "lorem-ipsum": "^2.0.3",
     "uuidv4": "^6.2.8"
-  }
+  },
+  "devDependencies": {}
 }
